Builds with JDK 25, drop guava and auto-value deps